# Cine

./: CMakeLists.txt  main.cpp
Controller/: Client.cpp  ColaEspera.cpp  ColaEsperaPreferencial.cpp  ListaDoblePreferencial.cpp  ListaGeneral.cpp  Nodo.cpp  NodoPila.cpp  Pila.cpp  PilaPasillo.cpp  Sit.cpp
Model/: Client.h  ColaEspera.h  ColaEsperaPreferencial.cpp  ColaEsperaPreferencial.h  ListaDoblePreferencial.h  ListaGeneral.h  Nodo.h  NodoPIla.h  Pila.h  PilaPasillo.h  Sit.h
